--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "passport-google-oauth2": "^0.1.6",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "pos": "^0.4.2"
   }
 }
