--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "imagemin-pngquant": "^5.0.0",
     "jasmine": "^2.5.3",
     "karma-coverage": "^1.1.1",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
